RESOLVED FIXED149820
WebCore::IOSurface should ask the IOSurface for the pixel format instead of caching it
https://bugs.webkit.org/show_bug.cgi?id=149820
Summary WebCore::IOSurface should ask the IOSurface for the pixel format instead of c...
Beth Dakin
Reported 2015-10-05 15:37:08 PDT
WebCore::IOSurface should ask the IOSurface for the pixel format instead of caching it
Attachments
Patch (3.54 KB, patch)
2015-10-05 15:38 PDT, Beth Dakin
no flags
Patch (3.75 KB, patch)
2015-10-05 15:54 PDT, Beth Dakin
no flags
Patch (4.57 KB, patch)
2015-10-05 16:09 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-10-05 15:38:59 PDT
Beth Dakin
Comment 2 2015-10-05 15:54:34 PDT
Tim Horton
Comment 3 2015-10-05 15:56:33 PDT
Comment on attachment 262470 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=262470&action=review > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:242 > + if (pixelFormat == 'BGRA') > + return Format::RGBA; I wonder if we should call the format BGRA since that's what it really is > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:243 > +#if PLATFORM(IOS) Why is this (and the other yuv stuff) iOS specific? Only the transform part should be iOS specific. That will fix your build error, too.
Beth Dakin
Comment 4 2015-10-05 16:09:08 PDT
(In reply to comment #3) > Comment on attachment 262470 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=262470&action=review > > > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:242 > > + if (pixelFormat == 'BGRA') > > + return Format::RGBA; > > I wonder if we should call the format BGRA since that's what it really is > NOOOOOOOOO > > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:243 > > +#if PLATFORM(IOS) > > Why is this (and the other yuv stuff) iOS specific? Only the transform part > should be iOS specific. > > That will fix your build error, too. Okay!
Beth Dakin
Comment 5 2015-10-05 16:09:28 PDT
Beth Dakin
Comment 6 2015-10-05 16:18:59 PDT
Note You need to log in before you can comment on or make changes to this bug.