WebCore::IOSurface should ask the IOSurface for the pixel format instead of caching it https://bugs.webkit.org/show_bug.cgi?id=149820 -and corresponding- rdar://problem/22976230

Reviewed by Tim Horton.

Also there is no reason to make YUV be iOS only, so this patch removes those
PLATFORM checks.

* platform/graphics/cocoa/IOSurface.h:
* platform/graphics/cocoa/IOSurface.mm:
(IOSurface::IOSurface):
(IOSurface::format):
* platform/spi/cocoa/IOSurfaceSPI.h:



Canonical link: https://commits.webkit.org/167935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190587 268f45cc-cd09-0410-ab3c-d52691b4dbfc